--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Ismael Moreira"
+  "author": "Ismael Moreira",
+  "dependencies": {
+    "sqlite3": "^5.1.7"
+  }
 }
