build: Readline-Sync installation.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "Ismael Moreira",
   "dependencies": {
+    "readline-sync": "^1.4.10",
     "sqlite3": "^5.1.7"
   }
 }
