--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "readline-sync": "^1.4.10",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/node": "^22.5.5",
+    "@types/readline-sync": "^1.4.8",
+    "typescript": "^5.6.2"
   }
 }
