--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [],
   "author": "Ismael Moreira",
   "dependencies": {
+    "@types/sqlite3": "^3.1.11",
     "readline-sync": "^1.4.10",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
